# lesson7-matplotlib-kei-miyazaki

./: Exercise_7_problem_1.py  Exercise_7_problem_2.py  README.md  pyproject.toml
